samples/_failures_safe/1761711656_5372ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcdfac3e.c:127:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  127 | int **transpose
      | ^~~
